# CanvasGPT-AI-Chatbot-Agent-for-Canvas-LMS

./: README.md  docker-compose.yaml  root  root.pub
.github/workflows/: cd.yml  ci.yml
Airflow/: Dockerfile  docker-compose.yaml
Airflow/dags/: pypdf2.py  snowflake_ingestion.py  springer_scrapper.py  vector_store.py
Architecture/: airflow_architecture.py  diag.py
Templates/: Working_Examples_with_Query.docx  ~$rking_Examples_with_Query.docx
backend/: .env_example  main_fastapi.py  pyproject.toml
backend/agents/: document_handler.py  supervisor.py  web_agent.py
backend/agents/canvas/: Pages.py  announcement.py  assignment.py  base.py  post_agent.py  quiz.py
backend/agents/rag/: pdf_listing_agent.py  rag_agent.py
backend/test_cases/: test_webagent.py
backend/test_files/: Small_Tables_Assignment.docx  small_dataset.xlsx
chrome_extension/: manifest.json  popup.html  popup.js
poc/canvas/: check.py
poc/chrome_extension_chatbot/: manifest.json  popup.html  popup.js
poc/web-scraping/: docling_parser.py  ocean_of_pdf.py  processing_results.json  web_scrapper.py
